--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@vue/test-utils": "^1.1.4",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.13",
+    "postcss-import": "^14.0.1",
+    "postcss-nested": "^5.0.5",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4",
     "vite": "^2.2.3"
